@@ -779,12 +779,16 @@ function_entry basic_functions[] = {
 	PHP_FE(array_rand,														NULL)
 	PHP_FE(array_unique,													NULL)
 	PHP_FE(array_intersect,													NULL)
+	PHP_FE(array_intersect_key,												NULL)	
+	PHP_FE(array_intersect_ukey,											NULL)
 	PHP_FE(array_uintersect,												NULL)
 	PHP_FE(array_intersect_assoc,											NULL)
 	PHP_FE(array_uintersect_assoc,											NULL)
 	PHP_FE(array_intersect_uassoc,											NULL)
 	PHP_FE(array_uintersect_uassoc,											NULL)
 	PHP_FE(array_diff,														NULL)
+	PHP_FE(array_diff_key,													NULL)
+	PHP_FE(array_diff_ukey,													NULL)
 	PHP_FE(array_udiff,														NULL)
 	PHP_FE(array_diff_assoc,												NULL)
 	PHP_FE(array_udiff_assoc,												NULL)
@@ -794,8 +798,8 @@ function_entry basic_functions[] = {
 	PHP_FE(array_filter,													NULL)
 	PHP_FE(array_map,														NULL)
 	PHP_FE(array_chunk,														NULL)
-	PHP_FE(array_combine,														NULL)
-	PHP_FE(array_key_exists,														NULL)
+	PHP_FE(array_combine,													NULL)
+	PHP_FE(array_key_exists,												NULL)
 
 	/* aliases from array.c */
 	PHP_FALIAS(pos, 				current, 				 first_arg_force_ref)
